<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserUpdateProfile">

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_section"
        android:textSize="35sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileFullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/full_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/updateText"
        app:layout_constraintTop_toBottomOf="@+id/updateText" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/profileFullNameText"
        app:layout_constraintTop_toBottomOf="@+id/profileFullNameText" />

    <TextView
        android:id="@+id/profilePhNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/phone_number"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <EditText
        android:id="@+id/etPhNum"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@+id/profilePhNumText"
        app:layout_constraintTop_toBottomOf="@+id/profilePhNumText" />

    <TextView
        android:id="@+id/profileStudentIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/student_id"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/etPhNum"
        app:layout_constraintTop_toBottomOf="@+id/etPhNum" />

    <EditText
        android:id="@+id/etStudentID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/student_id_e_g_p18001234"
        app:layout_constraintStart_toStartOf="@+id/profileStudentIDText"
        app:layout_constraintTop_toBottomOf="@+id/profileStudentIDText" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStudentID" />

</androidx.constraintlayout.widget.ConstraintLayout>